--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,37 @@
-.App {
+body{
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color: #c4e6f55e;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  display: flex;
+}
+.game {
+  width: 300px;
+  height: 300px;
+  margin: 30px;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  border: 2px solid #3f51b5;
+}
+.cell {
+  border: 1px solid mediumvioletred;
+}
+.alive {
+  background-color: rosybrown;
 }
 
-.App-link {
-  color: #61dafb;
+
+.cell--active {
+  border: 3px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.gameSettings {
+  padding: 0 30px;
+}
+#startGame {
+  margin-top: 25px;
+  width: 130px;
+  font-size: 14px;
+  height: 25px;
 }
